# object-detection

./: README.md  docker-compose.yaml  test_celery.py
api/: Dockerfile  pyproject.toml  run.py
api/src/: __init__.py  main.py  mq_main.py  route.py
api/src/helpers/: check_gpu_devices.py  image.py  model.py  storage.py  test_model.py
client/: Dockerfile  package-lock.json
client/src/: App.js
task-queue/: Dockerfile  pyproject.toml
task-queue/src/: task.py  tasks.py
task-queue/src/ml/: model.py
task-queue/src/ml/helpers/: image.py
