[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
matplotlib = "^3.7.1"
tensorflow = "^2.12.0"
six = "^1.16.0"
python-multipart = "^0.0.6"
imageio = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
