[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
imageio = "^2.28.1"
celery = "^5.2.7"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
