[tool.poetry]
name = "task-queue"
version = "0.1.0"
description = ""
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
celery = "^5.2.7"
redis = "^4.5.5"
matplotlib = "^3.7.1"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
